add asynchronous database operation in getPostById